FIX - Grid field headers misaligned if there is a mix of sortable and non-sortable as per https://github.com/silverstripe/silverstripe-admin/issues/528

--- a/client/src/styles/legacy/GridField.scss
+++ b/client/src/styles/legacy/GridField.scss
@@ -211,6 +211,10 @@
             @include hide-text-overflow; // Add ellipses to overflowing text
           }
 
+          span.non-sortable {
+            line-height: 14px; // Specify a line-height for misaligned non-sortable GridField table headers
+          }
+
           &.col-listChildrenLink {
             border-right: 0;
           }
